--- a/package.json
+++ b/package.json
@@ -5,35 +5,80 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint --fix",
+    "lint-fix": "tsc --noEmit && eslint ./src --ext js,ts --quiet --fix",
+    "prettier": "prettier -w ./src/**"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
+    "@angular/animations": "~13.0.3",
+    "@angular/cdk": "^13.0.3",
+    "@angular/common": "~13.0.3",
+    "@angular/compiler": "~13.0.3",
+    "@angular/core": "~13.0.3",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "@angular/forms": "~13.0.3",
+    "@angular/material": "^13.2.5",
+    "@angular/platform-browser": "~13.0.3",
+    "@angular/platform-browser-dynamic": "~13.0.3",
+    "@angular/router": "~13.0.3",
+    "@datorama/akita": "^6.1.3",
+    "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "devextreme": "^21.2.4",
+    "devextreme-angular": "^21.2.4",
+    "devextreme-schematics": "^1.3.0",
+    "file-saver": "^2.0.5",
+    "flex-layout": "^1.0.1",
+    "keycloak-angular": "^9.1.0",
+    "keycloak-js": "^17.0.0",
+    "moment": "^2.29.1",
+    "ng2-charts": "^3.0.8",
+    "ng2-dragula": "^2.1.1",
+    "ng2-tooltip-directive": "^2.10.3",
+    "ngx-filesaver": "^13.0.0",
+    "ngx-mask": "^7.1.0",
+    "ngx-toastr": "~13.0.1",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
+    "@angular-devkit/build-angular": "^13.2.5",
+    "@angular-eslint/builder": "^1.2.0",
+    "@angular-eslint/eslint-plugin": "^1.2.0",
+    "@angular-eslint/eslint-plugin-template": "^1.2.0",
+    "@angular-eslint/schematics": "^13.0.1",
+    "@angular-eslint/template-parser": "^1.2.0",
+    "@angular/cli": "~13.0.4",
+    "@angular/compiler-cli": "~13.0.3",
+    "@types/jasmine": "~3.10.2",
+    "@types/lodash-es": "^4.17.4",
+    "@types/node": "^16.11.11",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "^21.2.4",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-angular": "^4.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.6",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jasmine-core": "~3.10.1",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.3"
+    "lodash-es": "^4.17.21",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^8.2.2",
+    "tslint-config-prettier": "~1.18.0",
+    "tslint-plugin-prettier": "~2.3.0",
+    "typescript": "~4.4.4"
   }
 }
